# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
Dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto_ohje.md  kayttöohje.md  testaus.md  tuntikirjanpito.md  tuntikirjanpito.txt  vaatimusmaarittely.md  vaatimusmaarittely.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: kaavio.txt  monopoly.md
src/: diagramcreator.py  index.py  infohandler.py  infoseeker.py  text_based_ui.py
src/services/: infoseeker.py  operations.py
src/tests/: infohandler_test.py  infoseeker_test.py  operations_test.py
src/ui/: query_view.py  result_view.py  ui.py
